# family_doctor

./: .gitignore  Dockerfile  README.md  aerich.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
core/: config_constants.py  configs.py  routers.py
core/containers/: base_container.py  repo_container.py  service_container.py
core/database/: configs.py  database.py
core/exceptions/: services_exceptions.py
migrations/models/: 0_20220209113602_init.sql
weather/: api.py  models.py  repo.py  schemas.py  service.py
